# instar

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
Engineering/: Introduction.md  README.md
Engineering/Docs/: CASE-STUDY-Qwen-Triage.md  CODE-OVERVIEW.md  GUIDE-Creating-Rubrics.md  GUIDE-Setting-the-Bar.md  LESSON-Rubrics-Hands-On.md  PROVIDERS.md  README.md  RUBRICS.md  RUNBOOK.md
Engineering/fixtures/: marketing-content-ops.jsonl  sales-pipeline.jsonl  sample-traffic.jsonl  support-triage.jsonl
Engineering/fixtures/catalogs/: all-foreground.json  example-departments.json
Engineering/fixtures/rubrics/: support-triage-v1.json
Engineering/src/instar/: __init__.py
Engineering/src/instar/cli/: __init__.py  main.py
Engineering/src/instar/core/: __init__.py  catalog.py  cost.py  gateway.py  route.py  traffic.py
Engineering/src/instar/policies/: __init__.py  base.py  classifier.py  rules.py
Engineering/src/instar/providers/: __init__.py  anthropic.py  base.py  mock.py  openai_compat.py
Engineering/src/instar/reporters/: __init__.py  markdown.py
Engineering/src/instar/rubrics/: __init__.py  base.py  judges.py  spec.py
Engineering/tests/: test_catalog.py  test_cli.py  test_cost.py  test_fixtures.py  test_gateway.py  test_policies.py  test_providers.py  test_reporters.py  test_route.py  test_rubric_spec.py  test_rubrics.py  test_smoke.py  test_traffic.py
Marketing/: Measuring-Your-AI-Costs.md  README.md
Planning/: Engagement-Methodology.md  Naming.md  Project-Plan.md  README.md
